add design and functionality

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 
 <body>
 
+    <div class="joke-box">
+        <h1 class="joke-box__title">don't laugh challenge</h1>
+        <p class="joke-box__joke">Loading ...</p>
+        <button class="joke-box__btn">get another joke</button>
+    </div>
 
     <script src="script.js"></script>
 </body>
